--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta chatset="UTF-8">
-        <title>Webdev Project</title>
+        <title>My Resume</title>
         
     </head>
     <body>
-      <h1>Matt B's Portfolio</h1>
-       <h2>Aspiring Web Developer</h2>
+       <h1>Matthew Beacock</h1>
+       <img src="./20210309_162913.jpg" width="150">
+       <h2>Summary</h2>
+       I am a hardworking and dedicated individual with a love of coding.
        <hr>
-       <h3><a href="./public/Movie.html">Movie Ranking Project</a></h3>
-       <img src="assets/images/Movies.PNG" width="500">
-       <h3><a href="./public/Bday.html">Birthday Invite Project</a></h3>
-       <img src="assets/images/Bday.PNG" width="500">
+       <h3>Education</h3>
+       <ul>
+       <li>Currently studying the Complete Web Development Bootcamp 2023 at Udemy</li>
+       <li>Ontario Secondary School Diploma</li>
+    </ul>
        <hr>
-       <h3><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a></h3>
+       <h3>Skills</h3>
+       <li>Somewhat fluent in HTML</li>
+       <li>Capable of operating CNC plasma cutter</li>
+<hr>
+<h3>Work experience</h3>
+
+<h3>Store Clerk<br>
+Canadian Tire<br>
+05/2017-Present</h3>
+
+    <li>Stocking shelves, mixing paint and helping customers with a variety of inquiries.</li>
+    <li>Ensure that new merchandise is located and labeled in a way that is convenient for customers and coworkers.</li>
+    <li>Keeping the store neat and tidy, ensuring all product is properly faced, the floor is clean and routine maintenance is performed on the paint machine.</li>
+
+<p><h3>Fabrication Labourer<br>
+J&S Manufacturing<br>
+03/2015-02/2016<br>
+02-07/2013</h3></p>
+
+     <li>Cut parts for scissor lifts with a CNC plasma cutting table, before deburring, labeling, and preparing them for fabrication</li>
+     <li>Sandblasted, cleaned and painted machines</li>
+     <li>Kept the shop clean and orderly</li>
+     <li>Received orders and unloaded delivery trucks</li>
+     <li>Prepared orders for shipping</li>
+<hr>
+<a href="./About.html">My hobbies</a><br>
+<a href="./Contact.html">Contact Me</a>
     </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
